CHANGES.txt - 02/23/2006
------------------------

CHANGES IN CUPS V1.2.0b1

	- Added LDAP printer browsing support (STR #338)
	- Added official support for printer maintenance commands
	  via the CUPS Command file format and hooks in the
	  printer-type and web interfaces (STR #932)
	- The HP-GL/2 filter could get in an infinite loop trying
	  to convert HP-PCL files (STR #1415)
	- CUPS now implements the HTTP/1.1 Expect header (STR
	  #1407)
	- Options in PPD files are no longer automatically put in
	  an "Extra" group; rather, all options that are not
	  inside an Open/CloseGroup will be placed in the
	  "General" group (STR #1385)
	- The scheduler now creates a job-uuid attribute that
	  uniquely identifies a job on a network (STR #1410)
	- The init script now unsets the TMPDIR environment
	  variable to prevent user temporary directories from
	  being used by cupsd accidentally (STR #1424)
	- Added support for launchd on MacOS X.
	- Added support for notify_post on MacOS X.
	- Added support for DBUS on Linux.
	- All of the Berkeley (except for lpc) and System V
	  commands now support specification of user, host, and
	  port (STR #1028, STR #1029, STR #1087)
	- The lpmove command now allows you to move all jobs for
	  a given queue (STR #56)
	- The web interface now supports moving of a job or jobs
	  to another queue (STR #56)
	- The web interface now provides searching, paging, and
	  changing of the sort/display order of classes, jobs,
	  and printers.
	- cupsaddsmb now accepts a password on the command-line
	  and supports passwords with special characters (STR
	  #822, STR #1236)
	- ppdLoad*() no longer tries to "fix" bad characters in
	  UI text (STR #1101)
	- Printer names can now (reliably) contain Unicode
	  characters (STR #896)
	- The lpstat command now shows the time and date of the
	  last printer state change instead of the hardcoded "Jan
	  01 00:00" (STR #659)
	- The scheduler now adds a job-actual-printer-uri