@@ -3,6 +3,8 @@ CHANGES.txt - 02/23/2006
 
 CHANGES IN CUPS V1.2.0b1
 
+	- Added DragonFly support in local device backends (STR
+	  #1362)
 	- Added LDAP printer browsing support (STR #338)
 	- Added official support for printer maintenance commands
 	  via the CUPS Command file format and hooks in the
